# Networking

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_config.sh  dependencies.sh  deps_scenario.sh  external_config.sh  net_utils.sh  pre_build.sh  run_server.sh  update_scripts.sh
HTTPClient/: CMakeLists.txt  deps_scenario.sh  test.txt  test2.txt
HTTPClient/cmake_modules/: module.cmake
HTTPClient/include/: HTTPClient.h
HTTPClient/src/: HTTPClient.cpp
TCPClient/: CMakeLists.txt  TCPClient.cpp  TCPClient.h  build.sh  deps_scenario.sh
TCPServer/: CMakeLists.txt  TCPServer.cpp  TCPServer.h  build.sh
Test/: CMakeLists.txt  Test.cpp
http/: CMakeLists.txt  authenticator.h  deps_scenario.sh  downloader.h  downloader_decorator.h  downloader_interface.h  endpoint.h  headers_parser.h  http_client.h  http_client_decorator.h  http_client_interface.h  uploader.h  uploader_decorator.h  uploader_interface.h
http/include/http/: authenticator.h  chunked_data_receiver.h  downloader.h  downloader_decorator.h  downloader_interface.h  headers.h  headers_parser.h  http_client.h  http_client_base.h  http_client_boost.h  http_client_decorator.h  http_client_interface.h  query.h  uploader.h  uploader_decorator.h  uploader_interface.h  url_uploader.h
http/src/: authenticator.cpp  downloader.cpp  headers.cpp  headers_parser.cpp  headers_parser.h  http_client.cpp  http_client_20.cpp  http_client_base.cpp  http_client_boost.cpp  http_client_interface.cpp  query.cpp  uploader.cpp  uploader_interface.cpp  url_uploader.cpp
include/: common.h
include/anp/: common.h
include/anp/common/: asio_predefs.h
netlib/: .gitignore  CMakeLists.txt  build.sh  external_config.sh  socket_interface.h
netlib/Build-cmake-android/: cmake_install.cmake
netlib/common/: Log.h  asio_predefs.h  common.h
netlib/include/: socket_interface.h
netlib/include/tcp/: client.h  client_base.h  connection.h  connection_base.h  endpoint.h  fwd.h  server.h  socket.h  socket_base.h
netlib/include/tcp/ssl/: client.h  connection.h
netlib/src/tcp/: client.cpp  client_base.cpp  connection.cpp  connection_base.cpp  server.cpp
netlib/src/tcp/ssl/: client.cpp  connection.cpp
netlib/tcp/: client.h  client_base.h  connection.cpp  connection.h  connection_base.h  fwd.h  server.h  socket.h  socket_base.h
netlib/tcp/src/: client.cpp  client_base.cpp  connection.cpp  connection_base.cpp  server.cpp
netlib/tcp/src/ssl/: connection.cpp
netlib/tcp/ssl/: connection.h  root_certificates.hpp  socket.h
tcp/client/: CMakeLists.txt  client.h
tcp/client/src/: client.cpp
tcp/server/: CMakeLists.txt  server.h
tcp/server/src/: server.cpp
